--- a/scss/page/home/_stuff-i-do.scss
+++ b/scss/page/home/_stuff-i-do.scss
@@ -1,4 +1,5 @@
 @use 'pkg:@matteusan/himig';
+@use 'sass:string';
 
 @mixin render() {
   #stuff-i-do {
@@ -39,7 +40,7 @@
       width: calc(100% - 50px);
       max-width: 640px;
       position: relative;
-      aspect-ratio: himig.key-create('service-card-aspect-ratio', 16 / 11);
+      aspect-ratio: himig.key-create('service-card-aspect-ratio', string.unquote('16 / 11'));
       border-radius: himig.primitive-token-get('radius.md');
       overflow: hidden;
       transition: z-index 0.5s ease,
@@ -48,7 +49,7 @@
       .service-card__media {
         width: 100%;
         height: 100%;
-        aspect-ratio: himig.key-create('service-card-aspect-ratio', 16 / 11);
+        aspect-ratio: himig.key-create('service-card-aspect-ratio', string.unquote('16 / 11'));
         overflow: hidden;
 
         img {
@@ -60,11 +61,11 @@
       }
 
       @include himig.breakpoint-create('medium') {
-        @include himig.key-bind('service-card-aspect-ratio', 16 / 10);
+        @include himig.key-bind('service-card-aspect-ratio', string.unquote('16 / 10'));
       }
 
       @include himig.breakpoint-create('large') {
-        @include himig.key-bind('service-card-aspect-ratio', 16 / 9);
+        @include himig.key-bind('service-card-aspect-ratio', string.unquote('16 / 9'));
 
         &:hover {
           z-index: 1;
