--- a/scss/components/_ms-header.scss
+++ b/scss/components/_ms-header.scss
@@ -1,6 +1,6 @@
 @use '@matteusan/himig';
 
-$header-fill: linear-gradient(var(--ms-theme-surface-alpha-400) 0%, rgba(255 255 255 / 0) 100%) !default;
+$header-fill: linear-gradient(var(--ms-theme-surface-alpha-800) 20%, rgba(255 255 255 / 0) 100%) !default;
 $header-ink: 'surface-ink' !default;
 $header-border: 'surface-alpha-800' !default;
 
@@ -51,7 +51,7 @@ $header-style: 'default' !default;
         @include himig.key-bind('navbar-inset-top', 56px);
 
         .ms-navbar__wrapper {
-          @include himig.breakpoint-create('medium', 'max') {
+          @include himig.breakpoint-create('large', 'max') {
             @include himig.struct-bind('navbar-wrapper', (
               width: (
                 default: calc((100% - 50px) + 2em),
@@ -118,9 +118,10 @@ $header-style: 'default' !default;
         user-select: none;
         letter-spacing: himig.to-rem(-3px);
         @include himig.struct-shadow('header-title', 'high');
+        z-index: 2;
 
         @include himig.breakpoint-create('large') {
-          display: var(--ms-header-brand-visibility, none);
+          display: var(--ms-header-brand-visibility, block);
         }
       }
     }
