Make things a bit more pretty

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -63,7 +63,7 @@
     'accent-gradient': linear-gradient(45deg, #c43e00 0%, #ffa040 100%),
     'transition-time': 0.2s,
     'viewport-layout-limit': 1477px,
-    'viewport-content-limit': 67.3125rem
+    'viewport-content-limit': 1077px
   )
 ) {
   #__next {
