--- a/scss/page/home/_stuff-i-do.scss
+++ b/scss/page/home/_stuff-i-do.scss
@@ -19,11 +19,25 @@
       height: 100%;
       display: flex;
       flex-flow: var(--flow, column-reverse) nowrap;
-      gap: himig.primitive-token-get('gap.md');
+      @include himig.struct-apply('service-card', (
+        gap: 'md',
+      ));
 
       @include himig.breakpoint-create('large') {
         --flow: row;
-        gap: himig.primitive-token-get('gap.lg');
+        background: himig.key-create('service-card-fill', #{radial-gradient(circle at 100% 50%, var(--ms-theme-surface-alpha-800) 0%, transparent 100%)});
+        @include himig.color-apply('service-card', (
+          ink: 'surface-ink',
+          border: 'surface-alpha-800'
+        ));
+        @include himig.struct-apply('service-card', (
+          padding: ('xl' '2xl'),
+          radius: 'lg',
+          border-width: 'xs',
+          border-style: 'solid',
+        ));
+        @include himig.key-bind('service-card-gap', himig.primitive-token-get('gap.lg'));
+        overflow: hidden;
       }
 
       .service-card__media {
@@ -32,8 +46,10 @@
         border-radius: himig.primitive-token-get('radius.md');
         overflow: hidden;
         transition: z-index 0.5s ease,
-                    transform 0.5s var(--easing);
+                    transform 0.5s var(--easing),
+                    box-shadow 0.5s var(--easing);
         flex: 1;
+        // transform-origin: bottom right;
 
         img {
           width: 100%;
@@ -44,9 +60,11 @@
         }
 
         @include himig.breakpoint-create('large') {
+          transform: scale(1.5) translateX(50px) translateY(1.5em) rotateZ(var(--rotate-z, 2deg)) !important;
+          box-shadow: 0 10px 20px #{rgba(#000, 0.2)};
+
           &:hover {
             z-index: 1;
-            transform: scale(1.05) translateY(-20px) rotateZ(var(--rotate-z, -2deg)) !important;
           }
 
           &:not(:hover) {
@@ -104,6 +122,10 @@
             }
           }
         }
+      }
+
+      .ms-button {
+        margin-block-start: auto;
       }
     }
   }
