--- a/scss/page/home/_technologies.scss
+++ b/scss/page/home/_technologies.scss
@@ -8,20 +8,17 @@
     border-radius: himig.primitive-token-get('radius.xl');
   }
 
-  #technologies {
+  .technologies {
     $children: 12;
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fit, clamp(80px, 10vw, 200px));
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 1rem;
     justify-content: center;
     animation: load-in 0.5s ease;
 
-    @include himig.breakpoint-create('medium') {
-      grid-template-columns: repeat(auto-fit, clamp(80px, 10vw, 200px));
-    }
-
     .technology {
       width: 100%;
+      min-width: clamp(100px, 10vw, 200px);
       height: 100%;
       display: flex;
       flex-direction: column;
