--- a/scss/components/_ms-hero.scss
+++ b/scss/components/_ms-hero.scss
@@ -19,8 +19,7 @@ $hero-clip: polygon(0 0, 100% 0, 100% 93%, 0% 100%) !default;
     margin-block-end: himig.primitive-token-get('margin.5xl');
     border-radius: himig.primitive-token-get('radius.xl');
     padding-block: himig.primitive-token-get('padding.4xl');
-    --ms-theme-accent-alpha-200: rgba(218, 146, 97, 0);
-    background: radial-gradient(circle at 50% 30%, var(--ms-theme-accent-alpha-400) 0%, var(--ms-theme-accent-alpha-200) 100%);
+    background: radial-gradient(circle at 50% 30%, var(--ms-theme-accent-alpha-400) 0%, transparent 100%);
     border: 1px solid var(--ms-theme-accent-alpha-400);
 
     @include himig.breakpoint-create('large') {
