--- a/scss/components/_ms-navbar.scss
+++ b/scss/components/_ms-navbar.scss
@@ -35,6 +35,14 @@
     transition: all 0.5s ease;
     transform: translateY(-500);
 
+    @include himig.breakpoint-create('large') {
+      display: block;
+      position: static;
+      transform-origin: revert;
+      opacity: 1;
+      transform: revert;
+    }
+
     .ms-navbar__wrapper {
       @include himig.struct-apply('navbar-wrapper', (
         width: (
@@ -47,6 +55,7 @@
       flex-flow: column nowrap;
       gap: 0.5rem;
       justify-content: flex-end;
+      backdrop-filter: var(--backdrop-filter, blur(10px));
       @include himig.color-apply('navbar-wrapper', (
         fill: 'primary-600',
         border: 'primary-alpha-800'
@@ -57,12 +66,12 @@
         border-width: 'xs',
         border-style: 'solid'
       ));
-      backdrop-filter: blur(10px);
 
       @include himig.breakpoint-create('large') {
+        --backdrop-filter: none;
         @include himig.color-bind('navbar-wrapper', (
-          fill: none,
-          border: none
+          fill: #{rgba(0 0 0 / 0)},
+          border: #{rgba(0 0 0 / 0)}
         ));
         @include himig.struct-bind('navbar-wrapper', (
           padding: none,
@@ -115,6 +124,9 @@
           size: 'sm',
           weight: 200
         ));
+        display: flex;
+        justify-content: center;
+        text-align: center;
       }
 
       a {
@@ -156,24 +168,6 @@
           content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='white' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E%0A");
           margin-block-start: 0.1rem;
           margin-inline-start: 0.5rem;
-        }
-      }
-    }
-
-    @include himig.breakpoint-create('large') {
-      display: block;
-      position: static;
-      transform-origin: revert;
-      opacity: 1;
-      transform: revert;
-
-      .ms-navbar__wrapper {
-        flex-flow: row nowrap;
-
-        .ms-navbar__item {
-          display: flex;
-          justify-content: center;
-          text-align: center;
         }
       }
     }
