Fix footer padding

--- a/scss/components/_ms-footer.scss
+++ b/scss/components/_ms-footer.scss
@@ -15,7 +15,7 @@
       border: 'surface-alpha-400'
     ));
     @include himig.struct-apply('footer', (
-      padding: ('xl' 'sm'),
+      padding: ('lg' 'sm'),
       border-width: 'xs',
       border-style: 'solid'
     ));
